# mentoragents

./: CONTRIBUTING.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/notebook_experiments/: extract_pdf_contents.ipynb  extract_twitter_tweets.ipynb  long_term_memory.ipynb  short_term_memory.ipynb
backend/notebooks/: extract_pdf_contents.ipynb  extract_twitter_tweets.ipynb  extract_youtube_transcripts.ipynb  long_term_memory.ipynb  short_term_memory.ipynb
backend/src/mentoragents/: main.py
backend/src/mentoragents/core/: config.py  exceptions.py  handlers.py
backend/src/mentoragents/db/: client.py  indexes.py
backend/src/mentoragents/evaluation/: evaluate.py  generate_dataset.py  upload_dataset.py
backend/src/mentoragents/infra/: opik_utils.py
backend/src/mentoragents/models/: evaluation.py  mentor.py  mentor_extract.py  mentor_factory.py
backend/src/mentoragents/rag/: deduplicate_documents.py  embeddings.py  extracter.py  extractor.py  retrievers.py  splitters.py
backend/src/mentoragents/rag/data/: evaluation_dataset.json  extracter.py  extraction_metadata.json
backend/src/mentoragents/rag/extractors/: extract_pdf_contents.py  (+3 more)
backend/src/mentoragents/tools/: create_long_term_memory.py  delete_long_term_memory.py  evaluate_langraph_agent.py  generate_evaluation_data.py  save_mentors_into_mongodb.py
backend/src/mentoragents/utils/: constant_mentors.py  generate_response.py  reset_conversation.py
backend/src/mentoragents/workflow/: chains.py  edges.py  graph.py  models.py  nodes.py  prompt.py  state.py  tools.py
(+9 files in other folders)
